--- a/backend/.env.example
+++ b/backend/.env.example
@@ -12,6 +12,7 @@ DB_PORT=5432
 # Supabase settings
 SUPABASE_URL=your-supabase-url
 SUPABASE_KEY=your-supabase-key
+SUPABASE_JWT_SECRET=your-supabase-jwt-secret
 
 # Email settings (optional)
 EMAIL_HOST=smtp.gmail.com
