--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native": "^7.0.18",
     "@react-navigation/native-stack": "^7.3.2",
     "@supabase/supabase-js": "^2.49.3",
+    "@types/react-native-snap-carousel": "^3.8.11",
     "expo": "~52.0.40",
     "expo-file-system": "^18.0.12",
     "expo-image-picker": "^16.0.6",
@@ -23,6 +24,7 @@
     "react-native-paper": "^5.13.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.9.2",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-toast-message": "^2.2.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.2.0"
