--- a/backend/.env.example
+++ b/backend/.env.example
@@ -25,4 +25,12 @@ EMAIL_HOST_PASSWORD=your-email-password
 AWS_ACCESS_KEY_ID=your-aws-access-key
 AWS_SECRET_ACCESS_KEY=your-aws-secret-key
 AWS_STORAGE_BUCKET_NAME=your-bucket-name
-AWS_S3_REGION_NAME=your-region 
+AWS_S3_REGION_NAME=your-region
+
+# Admin Settings
+DJANGO_SUPERUSER_USERNAME=admin
+DJANGO_SUPERUSER_EMAIL=admin@example.com
+DJANGO_SUPERUSER_PASSWORD=adminpassword
+
+# Frontend URL for password reset links
+FRONTEND_URL=http://localhost:19006 
