--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,9 +1,23 @@
-# Supabase Configuration
-EXPO_PUBLIC_SUPABASE_URL=your-supabase-url
-EXPO_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
-
 # API Configuration
-EXPO_PUBLIC_API_URL=http://localhost:8000/api
+API_URL=http://192.168.1.61:8000/api
+
+# App Configuration
+APP_NAME=TymeLyne
+APP_VERSION=1.0.0
+APP_ENV=development
+
+# Theme Configuration  
+PRIMARY_COLOR=#6200ee
+SECONDARY_COLOR=#3700b3
+ACCENT_COLOR=#03dac6
+BACKGROUND_COLOR=#ffffff
+SURFACE_COLOR=#f5f5f5
+TEXT_COLOR=#000000
+ERROR_COLOR=#b00020
+
+# Miscellaneous
+DEBUG=true
+ENABLE_ANALYTICS=false
 
 # Feature Flags
 EXPO_PUBLIC_ENABLE_ANALYTICS=false
