--- a/app/backend/requirements.txt
+++ b/app/backend/requirements.txt
@@ -1,7 +1,11 @@
 django==4.2.10
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
-django-cors-headers==4.3.1
+django-cors-headers==4.3.0
 coreapi==2.3.3
 Pillow==10.2.0
-gunicorn==21.2.0 
+gunicorn==21.2.0
+requests==2.31.0
+pytest==7.4.0
+pytest-django==4.5.2
+coverage==7.3.2 
