--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -30,7 +30,17 @@ yarn-error.*
 *.pem
 
 # local env files
+.env
+.env.local
+.env.development
+.env.test
+.env.production
 .env*.local
+*.env
 
 # typescript
 *.tsbuildinfo
+
+# Secrets
+credentials.json
+secrets.json
