--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,12 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cross-env NODE_ENV=test jest --detectOpenHandles --forceExit",
+    "test:middleware": "cross-env NODE_ENV=test jest auth.middleware",
+    "test:email": "cross-env NODE_ENV=test jest email.service",
+    "test:db": "cross-env NODE_ENV=test jest db.config",
+    "test:watch": "cross-env NODE_ENV=test jest --watch",
+    "test:coverage": "cross-env NODE_ENV=test jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -18,11 +23,24 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.13.2",
     "nodemailer": "^6.10.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.1.4",
+    "mongoose": "^8.13.2",
+    "nodemon": "^3.1.9",
+    "supertest": "^7.1.0"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "testMatch": ["**/__tests__/**/*.js", "**/?(*.)+(spec|test).js"],
+    "testPathIgnorePatterns": ["/node_modules/", "/__tests__/utils/"],
+    "coveragePathIgnorePatterns": ["/node_modules/"],
+    "moduleNameMapper": {
+      "^mongoose$": "<rootDir>/__tests__/utils/mongoose-mock.js"
+    }
   }
 }
