Email Authentication + Admin Dashboard

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,13 +1,19 @@
-PORT = null
-MONGODB_URI = null
-JWT_SECRET = null
-NODE_ENV = null
+# Server Configuration
+NODE_ENV=development
+PORT=5001
 
-# Email configuration
-SMTP_HOSt = null
-SMTP_PORT = null
-SMTP_SECURE = null
-SMTP_USER = null
-SMTP_PASSWORD = null
+# MongoDB Connection
+MONGODB_URI=mongodb://mongo:27017/tymelyne
 
-FRONTEND_URL = null
+# JWT Token
+JWT_SECRET=secret_key_change_in_production
+
+# Email Service Configuration
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=tymelyne.authentication@gmail.com
+SMTP_PASSWORD=app_password_here
+
+# Frontend URL (for email verification links) THIS MIGHT THROW AN ERROR ON MAC. WINDOWS REQUIRES IP:8082
+FRONTEND_URL=http://localhost:8082 
