--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,28 @@ services:
   backend:
     build: ./backend
     ports:
-      - "5001:5000"
+      - "5001:5001"
     depends_on:
       - mongo
     environment:
       - NODE_ENV=development
-      - PORT=5000
+      - PORT=5001
       - MONGODB_URI=mongodb://mongo:27017/tymelyne
       - JWT_SECRET=your_jwt_secret_key_change_in_production
     volumes:
       - ./backend:/usr/src/app
       - /usr/src/app/node_modules
+
+  mongo-express:
+    image: mongo-express
+    ports:
+      - 8081:8081
+    environment:
+      ME_CONFIG_MONGODB_SERVER: mongo
+      ME_CONFIG_BASICAUTH_USERNAME: admin
+      ME_CONFIG_BASICAUTH_PASSWORD: password
+    depends_on:
+      - mongo
 
   mongo:
     image: mongo:latest
