--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,3 +17,6 @@ SMTP_PASSWORD=app_password_here
 
 # Frontend URL (for email verification links) THIS MIGHT THROW AN ERROR ON MAC. WINDOWS REQUIRES IP:8082
 FRONTEND_URL=http://localhost:8082 
+
+# OPENAI API KEY
+OPENAI_API_KEY=your_openai_api_key
