--- a/backend/package.json
+++ b/backend/package.json
@@ -23,7 +23,9 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose-sequence": "^6.0.1",
     "nodemailer": "^6.10.1",
+    "openai": "^4.95.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
@@ -36,9 +38,17 @@
   },
   "jest": {
     "testEnvironment": "node",
-    "testMatch": ["**/__tests__/**/*.js", "**/?(*.)+(spec|test).js"],
-    "testPathIgnorePatterns": ["/node_modules/", "/__tests__/utils/"],
-    "coveragePathIgnorePatterns": ["/node_modules/"],
+    "testMatch": [
+      "**/__tests__/**/*.js",
+      "**/?(*.)+(spec|test).js"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/__tests__/utils/"
+    ],
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ],
     "moduleNameMapper": {
       "^mongoose$": "<rootDir>/__tests__/utils/mongoose-mock.js"
     }
