OpenAI Quota Limit Marker

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,3 +20,6 @@ FRONTEND_URL=http://localhost:8082
 
 # OPENAI API KEY
 OPENAI_API_KEY=your_openai_api_key
+
+# Set to 'true' to use mock data instead of calling the OpenAI API
+USE_MOCK_OPENAI=false
