--- a/backend/.env.example
+++ b/backend/.env.example
@@ -18,8 +18,14 @@ SMTP_PASSWORD=app_password_here
 # Frontend URL (for email verification links) THIS MIGHT THROW AN ERROR ON MAC. WINDOWS REQUIRES IP:8082
 FRONTEND_URL=http://localhost:8082 
 
+# Backend URL (explicit URL for email verification)
+BACKEND_URL=http://localhost:5001
+
 # OPENAI API KEY
 OPENAI_API_KEY=your_openai_api_key
 
 # Set to 'true' to use mock data instead of calling the OpenAI API
 USE_MOCK_OPENAI=false
+
+# Comma-separated list of allowed CORS origins
+ALLOWED_ORIGINS=http://localhost:8081,http://localhost:8082,exp://localhost:8081,exp://localhost:8082 
