--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,10 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-native-community/slider": "^4.5.6",
     "@react-native-picker/picker": "^2.11.0",
+    "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.7.2",
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/stack": "^6.4.1",
+    "@react-navigation/native": "^6.1.14",
+    "@react-navigation/stack": "^6.3.25",
     "expo": "~52.0.46",
     "expo-font": "~13.0.4",
     "expo-status-bar": "~2.0.1",
@@ -23,8 +24,8 @@
     "react-native": "0.76.9",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-reanimated": "^2.17.0",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "^4.10.0"
+    "react-native-safe-area-context": "^4.12.0",
+    "react-native-screens": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
