--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-reanimated": "^2.17.0",
     "react-native-safe-area-context": "^4.12.0",
