--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,9 @@
     "react-native-gesture-handler": "^2.25.0",
     "react-native-reanimated": "^2.17.0",
     "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "^4.4.0"
+    "react-native-screens": "^4.4.0",
+    "expo-image-picker": "~16.0.6",
+    "expo-image-manipulator": "~13.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
