--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,15 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "dev": "expo start --android --clear",
+    "dev:clean": "expo start --android --clear --no-dev --minify"
   },
   "dependencies": {
     "@expo-google-fonts/montserrat": "^0.3.0",
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-community/slider": "^4.5.6",
-    "@react-native-picker/picker": "^2.11.0",
+    "@react-native-community/slider": "4.5.5",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.14",
@@ -23,8 +25,8 @@
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "^2.25.0",
-    "react-native-reanimated": "^2.17.0",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "^4.4.0",
     "expo-image-picker": "~16.0.6",
