--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,29 +13,29 @@
   "dependencies": {
     "@expo-google-fonts/montserrat": "^0.3.0",
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-community/slider": "4.5.5",
-    "@react-native-picker/picker": "2.9.0",
+    "@react-native-community/slider": "4.5.6",
+    "@react-native-picker/picker": "2.11.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/stack": "^6.3.25",
-    "expo": "~52.0.46",
-    "expo-font": "~13.0.4",
-    "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.9",
+    "expo": "^53.0.12",
+    "expo-font": "~13.3.1",
+    "expo-image-manipulator": "~13.1.7",
+    "expo-image-picker": "~16.1.4",
+    "expo-status-bar": "~2.2.3",
+    "react": "19.0.0",
+    "react-native": "0.79.4",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "^4.4.0",
-    "expo-image-picker": "~16.0.6",
-    "expo-image-manipulator": "~13.0.6"
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "axios": "^1.8.4",
-    "expo-secure-store": "^14.0.1"
+    "expo-secure-store": "~14.2.3"
   },
   "private": true
 }
