--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "test:email": "cross-env NODE_ENV=test jest email.service",
     "test:db": "cross-env NODE_ENV=test jest db.config",
     "test:watch": "cross-env NODE_ENV=test jest --watch",
-    "test:coverage": "cross-env NODE_ENV=test jest --coverage"
+    "test:coverage": "cross-env NODE_ENV=test jest --coverage",
+    "test:logo": "node scripts/test-logo-generation.js"
   },
   "keywords": [],
   "author": "",
@@ -26,7 +27,7 @@
     "mongoose": "^8.13.2",
     "mongoose-sequence": "^6.0.1",
     "nodemailer": "^6.10.1",
-    "openai": "^4.95.1",
+    "openai": "^4.104.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
